# personal-finance-mcp

./: .dockerignore  .env.example  .gitignore  .mcpregistry_registry_token  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Plan.md  README.md  SECURITY.md  pyproject.toml  run_production.py  server.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  hf-sync.yml  pypi-publish.yml
config/: claude_desktop.json
docs/: Architecture.md  CHANGELOG.md  HOW_IT_WORKS.md  anthropic.md  deployment.md  documentation.md  setup.md  testing.md  troubleshoot.md
src/: __main__.py  server.py
src/models/: __init__.py  enums.py  schemas.py
src/tools/: advisor.py  bonds.py  cashflow.py  debt.py  derivatives.py  india_savings.py  marketdata.py  mutual_funds.py  planning.py  portfolio.py  risk_profile.py  stocks.py  tvm.py
src/utils/: formatters.py
src/web/: server.py
tests/: test_bonds.py  test_debt.py  test_governance.py  test_integration.py  test_mutual_funds.py  test_new_tools.py  test_portfolio.py  test_ratios.py  test_stocks.py  test_tvm.py  test_web_security.py
web/: package-lock.json  package.json
web/app/: ChatDemo.js  ClientMockups.js  Nav.js  Reveal.js  format.js  globals.css  layout.js  lib.js  not-found.js  opengraph-image.js  page.js
web/app/calculator/: page.js
web/app/connect/: page.js
web/app/dashboard/: page.js
web/app/tools/: page.js
