[project]
name = "personal-finance-mcp"
version = "1.1.0"
description = "Complete personal-finance MCP server + website (76 deterministic tools)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
personal-finance-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
]
