[project]
name = "personal-finance-mcp"
version = "1.1.0"
description = "Complete personal-finance MCP server + website (76 deterministic tools)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "finance", "personal-finance", "fintech", "claude", "investment", "calculator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/sarveshtalele/personal-finance-mcp"
Demo = "https://sarveshtalele-personal-finance-mcp.hf.space"
Issues = "https://github.com/sarveshtalele/personal-finance-mcp/issues"

[project.scripts]
personal-finance-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
web = [
    "starlette>=0.37",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.3.0",
]
